--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,121 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: "Poppins", sans-serif !important;
+    background-color: #ececec !important;
+    background-image: linear-gradient(45deg, #007C43, #62B34F) !important;
+    background-size: 504px 100% !important;
+    background-repeat: no-repeat !important;
+    background-position: right !important;
+  }
+
+  
+
+main {
+    padding-left: 83px;
+    padding-right: 382px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    overflow: auto;
+    unicode-bidi: isolate;
+    min-height: 100vh !important;
+    display: flex !important;
+  }
+  
+  .card {
+    width: 100%;
+    border-radius: 23px;
+    box-shadow: 0 1px 20px 0px rgba(0, 0, 0, 0.1);
+    min-height: 597px;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
+    unicode-bidi: isolate;
+  }
+  
+  .label-container {
+    color: rgba(40, 40, 40, 0.8);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.45em;
+    margin-bottom: 10px;
+  }
+  
+  .card-body {
+    padding: 80px 90px 65px 80px;
+    flex: 1 1 auto;
+    min-height: 1px;
+  }
+    
+  input {
+    padding: 10px;
+    width: 100%;
+    font-size: 20px;
+    border: 1px solid #aaaaaa;
+    margin-bottom: 15px;;
+  }
+  
+  input.invalid {
+    background-color: #ffdddd;
+  }
+  
+  .tab {
+    display: none;
+  }
+  
+  .step {
+    height: 25px;
+    width: 25px;
+    margin: 0 2px;
+    background-color: #007C43;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.3;
+  }
+    
+  .step.active {
+    opacity: 1;
+  }
+  
+  .prime-btn {
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+    background-image: linear-gradient(to bottom left, #007C43, #62B34F);
+    cursor: pointer;
+    padding: 8px 40px;
+    margin-left: 10px;
+    border-radius: 10px;
+    border: none;
+  }
+  
+  .prime-btn:hover, .prime-btn:active {
+    background-image: linear-gradient(to bottom left, #62B34F, #007C43);
+  }
+  
+  #database, #kafka {
+    display: none;
+  }
+  
+  *, ::after, ::before {
+    box-sizing: border-box;
+  }
+
+  @media (max-width: 767px) {
+    .bd-wizard-card .card-body {
+        padding: 50px 20px 20px;
+    }
+    main {
+        padding: 24px;
+    }
+}
