--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,14 @@
             <h2>Configurations</h2>
             <input id="tablename" type="text" formControlName="tablename" placeholder="e.g. Table Name" class="optional"/>
             <input id="columnname" type="text" formControlName="columnname" placeholder="Column Name" style="width:35%;" class="optional"/>
-            <input id="columntype" type="text" formControlName="columntype" placeholder="Column Type" style="width:35%;" class="optional"/>
+            <select class="form-select form-select-lg mb-3 optional" aria-label=".form-select-lg example" id="columntype" formControlName="columntype" style="width:35%;display: inline;">
+              <option value="" selected>Select Column Type</option>
+              <option value="number">NUMBER</option>
+              <option value="float">FLOAT</option>
+              <option value="string">STRING</option>
+              <option value="binary">BINARY</option>
+            </select>
+            <!-- <input id="columntype" type="text" formControlName="columntype" placeholder="Column Type" style="width:35%;" class="optional"/> -->
             <button type="button" (click)="addColumn()" class="prime-btn" style="margin-left: 10px;">Add</button>
             <table class="table table-striped table-dark">
               <thead>
