--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,3 +99,12 @@ input.invalid {
         padding: 24px;
     }
 }
+#col-td {
+    padding: 0px;
+}
+.col-table {
+    margin: 0px;
+}
+.col-head, .col-head th {
+    border: none;
+}
