--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,7 +91,7 @@
             </select>
             <!-- <input id="columntype" type="text" formControlName="columntype" placeholder="Column Type" style="width:35%;" class="optional"/> -->
             <button type="button" (click)="addColumn()" class="prime-btn" style="margin-left: 10px;">Add</button>
-            <table class="table table-striped table-dark">
+            <table class="table table-striped table-bordered">
               <thead>
                 <tr>
                   <th>Columna Name</th>
