Change application image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,6 @@
               <option value="string">STRING</option>
               <option value="binary">BINARY</option>
             </select>
-            <!-- <input id="columntype" type="text" formControlName="columntype" placeholder="Column Type" style="width:35%;" class="optional"/> -->
             <button type="button" (click)="addColumn()" class="prime-btn" style="margin-left: 10px;">Add</button>
             <table class="table table-striped table-bordered">
               <thead>
@@ -238,7 +237,7 @@
       </form>
     </div>
     <div class="col-xl-5 d-none d-xl-block">
-      <img src="assets/applicatin.jpg" alt="applicatin" class="img-fluid"/>
+      <img src="assets/dataconfig.jpg" alt="dataconfig" class="img-fluid"/>
     </div>
     </div>
     <div class="row">
