--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,3 +108,8 @@ input.invalid {
 .col-head, .col-head th {
     border: none;
 }
+.invalid {
+    margin-left: 25px;
+    font-size: 14px;
+    color:red;
+}
