--- a/src/app/consumer/consumer.component.html
+++ b/src/app/consumer/consumer.component.html
@@ -1,6 +1,6 @@
-<div>
-    <h1>Kafka Data</h1>
-    <ul>
-      <li *ngFor="let item of kafkaData">{{ item }}</li>
-    </ul>
-  </div>
+<div style="overflow: hidden scroll; height: 100px;">
+  <h1>Processing...</h1>
+  <ul>
+    <li *ngFor="let item of kafkaData">{{ item }}</li>
+  </ul>
+</div>
